# vsmodupdater

./: README.md  pyproject.toml  setup.py
vsmodupdater/: __init__.py  api.py  cli.py  fs.py  util.py  version.py
