[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsmodupdater"
version = "0.6.1"
authors = [
    { name = "Ferdinand B", email = "me+vsmodupdater@yrlf.at" }
]
description = "a mod updater for VintageStory"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests~=2.28"
]

[project.urls]
"Homepage" = "https://github.com/Ferdi265/vsmodupdater"
"Bug Tracker" = "https://github.com/Ferdi265/vsmodupdater/issues"
